<resources>
    <string name="app_name">Pizarra de Precios</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="olvido_la_contrasenia">Se me olvidó la contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
