<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inicio.LoginView"
    android:background="@color/primaryColor"
    android:padding="@dimen/login_padding">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:errorTextAppearance="@style/Widget.TextInputLayout.Error"
        app:hintTextAppearance="@style/Widget.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiled_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:theme="@style/Widget.EditText.EditTextInputLayout" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:errorTextAppearance="@style/Widget.TextInputLayout.Error"
        app:hintTextAppearance="@style/Widget.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_email"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiled_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:singleLine="true"
            android:theme="@style/Widget.EditText.EditTextInputLayout" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_shape_button_login"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/iniciar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_password" />

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/no_tienes_cuenta"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/olvido_la_contrasenia"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="INICIO DE SESIÓN"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>